# Weather-app

./: CMakeLists.txt  DOCUMENTATIE.docx
include/: api.h  main.h  textbox.h
src/: api.cpp  main.cpp  textbox.cpp
